--- a/divpuzzle/index2.html
+++ b/divpuzzle/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="red--box"></div> 
-  </div>
+  <div class="clearfix">
   <div class="green--box"></div>
   <div class="blue--box"></div>
   </div>
