--- a/html-practice/index.html
+++ b/html-practice/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>
-    <a href="https://www.google.com/">
+    <a href="https://www.google.com/" target="_blank">
         <div id="main--area">
             <p class="text-red"></p>
         </div>
