--- a/html-practice/index.html
+++ b/html-practice/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <p>
-    <a href="https://www.google.com/" target="_blank">
+  <html lang="ja">
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body>
+      <p>
+        <a href="https://www.google.com/" target="_blamk">
+          <img src="./images/png.webp" alt="カワウソの画像"></a>
         <div id="main--area">
-            <p class="text-red"></p>
+          <p class="text-red"></p>
         </div>
-        <img src="./images/png.webp" alt="サムプルの画像"></a> 
-        </p>
-</body>
-</html>
+        <a>
+      </p>
+    </body>
+  </html>
