--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>大見出し</h1>
     <h2>中見出し</h2>
     <p>文章</p>
@@ -15,8 +15,8 @@
     <h4>小見出し</h4>
     <p>文章</p>
     <h5>中見出し</h5>
-    <P>文章</P>
+    <p>文章</p>
     <h6>小見出し</h6>
-    <P>文章</P>
-</body>
+    <p>文章</p>
+  </body>
 </html>
