--- a/divpuzzle/index2.html
+++ b/divpuzzle/index2.html
@@ -10,8 +10,8 @@
 <body>
   <div class="red--box"></div> 
   <div class="clearfix">
-    <div class="green--box">
-    <div class="blue--box">
+    <div class="green--box"></div>
+    <div class="blue--box"></div>
   </div>
   <div class="yellow--box"></div>
 </body>
