--- a/divpuzzle上級編/index.html
+++ b/divpuzzle上級編/index.html
@@ -10,26 +10,24 @@
 </head>
 <body>
   <div class="red--box">
-    <div class="purple--main">
-      <div class="purple1--box"></div>
-      <div class="purple2--box"></div>
-      <div class="purple3--box"></div>
+    <div class="clearfix">
+      <div class="purple--main">
+        <div class="purple--box"></div>
+        <div class="purple--box"></div>
+        <div class="purple--box"></div>
+      </div>
     </div>
   </div>
     <div class="clearfix">
       <div class="green--box"></div>
-        <div>
-          <div class="brown--box">
-            <div class="orange--main">
-              <div class="orange--side1"></div>
-              <div class="orange--side2"></div>
-              <div class="orange--side3"></div>
-            </div>
-          </div>
-        </div>
+      <div class="brown--box">
+        <div class="orange--main">
+        <div class="orange--side"></div>
+        <div class="orange--side"></div>
+        <div class="orange--side"></div>
       </div>
     </div>
-    <div class="yellow--box"></div>
   </div>
+  <div class="yellow--box"></div>
 </body>
 </html>
