--- a/divpuzzle上級編/index.html
+++ b/divpuzzle上級編/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="red--box">
-    <div class="clearfix">
-      <div class="purple--main">
+    <div class="purple--main">
+      <div class="clearfix">
         <div class="purple--box"></div>
         <div class="purple--box"></div>
         <div class="purple--box"></div>
@@ -19,11 +19,12 @@
   </div>
     <div class="clearfix">
       <div class="green--box"></div>
-      <div class="brown--box">
+        <div class="brown--box">
         <div class="orange--main">
           <div class="orange--side"></div>
           <div class="orange--side"></div>
           <div class="orange--side"></div>
+        </div>
       </div>
     </div>
   </div>
